--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 			<div class="nav">
 				<ul>
 					<li><img></li>
-					<li>Surf + Paddle CO. Blog</li>
+					<li>Surf &amp; Paddle CO. Blog</li>
 					<li>about</li>
 					<li>search</li>
-				</ul>
+				</ul>	
 
 				<!--<div class="logo">
 					<img> 
@@ -29,14 +29,14 @@
 				<img> <!--  insert mag icon -->
 			</div>
 			<div class="title">
-				<h1>Surf + Paddle Co.</h1> <!-- need to change 'and' -->
+				<h1>Surf &amp; Paddle Co.</h1> 
 				An Ironyard Academy Project Est. Fall 2013
 			</div>
 
 		</div>
 		<div id="body">
 			<div id="col1">
-				<h2>a fantatic engaging headline goes here</h2>
+				<h2>a fantati engaging headline goes here</h2>
 				<img> <!-- insert styled photo here -->
 				<p><span>Anne Marie<span> on <span>Monday Oct 7th 9:22pm<span></p>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi sint, nisi fuga dolorum voluptatem tempore culpa a porro nihil iusto voluptas tenetur, fugit aliquid corrupti eligendi ratione! Unde, necessitatibus, quisquam.</p>
@@ -54,10 +54,10 @@
 				</div>
 			</div>
 			<div id="col2">
-				<img><!-- insert styled photo here -->
+				<div><img src="assets/surferProfilePic.jpg"></div>
 				<h5>anne marie</h5>
 				<div>Twitter | Facebook | Instagram</div>
-				<img> <!-- insert action photo here -->
+				<img src="assets/paddleBoarder.jpg"> 
 				<p>About This Ad</p>
 				<h4>sidebar section heading</h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem nisi aut, nemo corporis maxime quod voluptatibus odio consequuntur doloribus ducimus recusandae deleniti! Sapiente non, error accusamus reprehenderit eos, <span>nam ullam.</span>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
