pictures with overlays added

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		</div>
 		<div id="body">
 			<div id="col1">
-				<h2>a fantati engaging headline goes here</h2>
+				<h2>a fantastic engaging headline goes here</h2>
 				<img> <!-- insert styled photo here -->
 				<p><span>Anne Marie<span> on <span>Monday Oct 7th 9:22pm<span></p>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi sint, nisi fuga dolorum voluptatem tempore culpa a porro nihil iusto voluptas tenetur, fugit aliquid corrupti eligendi ratione! Unde, necessitatibus, quisquam.</p>
@@ -54,10 +54,10 @@
 				</div>
 			</div>
 			<div id="col2">
-				<div><img src="assets/surferProfilePic.jpg"></div>
+				<div class="surferProfilePic"><img src="assets/surferProfilePic.jpg"></div>
 				<h5>anne marie</h5>
 				<div>Twitter | Facebook | Instagram</div>
-				<img src="assets/paddleBoarder.jpg"> 
+				<div class="surferPic"></div> 
 				<p>About This Ad</p>
 				<h4>sidebar section heading</h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem nisi aut, nemo corporis maxime quod voluptatibus odio consequuntur doloribus ducimus recusandae deleniti! Sapiente non, error accusamus reprehenderit eos, <span>nam ullam.</span>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
@@ -65,10 +65,10 @@
 		</div>
 		<div id="footer">
 			<h2>most popular posts</h2>
-			<div class="footGal" style="background-color: purple"><img><!-- insert styled photo here -->another cool post</div>
-			<div class="footGal" style="background-color: pink"><img><!-- insert styled photo here -->post title</div>
-			<div class="footGal" style="background-color: brown"><img><!-- insert styled photo here -->here's another longer post title</div>
-			<div class="footGal" style="background-color: orange"><img><!-- insert styled photo here -->oh cool a post!</div>
+			<div class="footGal footGal1"><img><!-- insert styled photo here -->another cool post</div>
+			<div class="footGal footGal2"><img><!-- insert styled photo here -->post title</div>
+			<div class="footGal footGal3"><img><!-- insert styled photo here -->here's another longer post title</div>
+			<div class="footGal footGal4"><img><!-- insert styled photo here -->oh cool a post!</div>
 			<div class="footNav">
 				<img> <!-- insert TIY logo -->
 				The Ironyard Copyright 2013, All Rights Reserved
