added icons, added new font

--- a/index.html
+++ b/index.html
@@ -5,28 +5,22 @@
 	<title>Surf and Paddle</title>
 	<link rel="stylesheet" href="normalize.css">
 	<link rel="stylesheet" href="styles.css">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
+	<link rel="stylesheet" href="css/css/font-awesome.css">
 </head>
 <body>
 	<div id="container">
 		<div id="header">
 			<div class="nav">
 				<ul>
-					<li><img></li>
+					<li><img src="https://maxcdn.icons8.com/iOS7/PNG/25/Travel/beach_filled-25.png" title="Beach Filled" width="25"></li>
 					<li>Surf &amp; Paddle CO. Blog</li>
-					<li>about</li>
 					<li>search</li>
-				</ul>	
-
-				<!--<div class="logo">
-					<img> 
-					Surf and Paddle CO. Blog
-				</div>
-				<div class="subNav">
-					about search
-				</div> -->
-
-
-				<img> <!--  insert mag icon -->
+					<li>about</li>
+					<li><i class="fa fa-search fa-flip-horizontal" aria-hidden="true"></i></li>
+					
+				</ul>
+				<img> 
 			</div>
 			<div class="title">
 				<h1>Surf &amp; Paddle Co.</h1> 
